# calenlove

./: .env.example  .gitattributes  .gitignore  APK_ROUTE_PROTECTED.txt  PATCH_NOTES.txt  README.md  START_DEV.bat  SUPABASE_SQL_SETUP.sql  index.html  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
.github/workflows/: ios-cloud-build.yml
ANDROID/: APK_BUILD.bat  BUILD_APK.bat  CHECK_ANDROID_ENV.bat  INSTALL_APK.bat  INSTALL_MSVC_BUILD_TOOLS.bat  README.txt
DOCS/: API_KEYS_AND_ENV.txt  HOSTING_GUIDE_FOR_DUMMY.txt  IOS_GUIDE_FOR_DUMMY.txt  NETWORK_AND_SYNC.txt  TUTORIAL_FOR_DUMMY.txt
EXE/: BUILD_EXE.bat  README.txt
GITHUB/: PUSH_TO_GITHUB.bat  README.txt
IPHONE/: BUILD_IPHONE.command  BUILD_IPHONE_TESTFLIGHT.command  CHECK_IOS_ENV.command  OPEN_XCODE.command  README.txt  RUN_IPHONE_SIMULATOR.command
SERVER/: AUTO_UNPACK_AND_START.sh  BUILD_SERVER_PACKAGE.bat  README.txt  SERVER_ENV.txt  server.js
SERVER/READY/: README.txt
logs/: README.txt
mobile-assets/android/: README.txt
scripts/: apply-android-mobile-assets.mjs  apply-key-api.mjs  run-with-log.mjs
scripts/android/: _android-common.ps1  build-android.ps1  check-android-env.ps1  install-android-apk.ps1  install-msvc-build-tools.ps1
scripts/ios/: _ios-common.sh  build-ios-simulator-ci.sh  build-iphone.sh  check-ios-env.sh  open-xcode.sh  run-ios-simulator.sh
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+26 files in other folders)
