[package]
name = "lovers_calendar"
version = "0.9.7"
description = "Love & Work Calendar"
authors = ["OpenAI for user project"]
edition = "2021"

[lib]
name = "lovers_calendar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.5.6", features = [] }
